<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.calvin.cs262.stz4.MainActivity">

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="always"
        android:icon="@drawable/ic_cart"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
